2023-12-08T01:08:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7136024729 # 2148
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-08
* notice: last 14d: unq all: 21 125
* notice: prev accum: outdated-unq outdated-all / unq all: 479 2569 / 506 2703
* notice: next accum: outdated-unq outdated-all / unq all: 483 2578 / 506 2703
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-11-23] / []

2023-12-07T16:20:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7130965526 # 2147
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-07
* notice: last 14d: unq all: 21 128
* notice: prev accum: outdated-unq outdated-all / unq all: 479 2569 / 505 2702
* notice: next accum: outdated-unq outdated-all / unq all: 479 2569 / 506 2703
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -3 -6 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-11-23 2023-12-07]

2023-12-06T16:20:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7117265524 # 2144
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-06
* notice: last 14d: unq all: 23 133
* notice: prev accum: outdated-unq outdated-all / unq all: 479 2569 / 504 2701
* notice: next accum: outdated-unq outdated-all / unq all: 479 2569 / 505 2702
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-12-06]

2023-12-06T08:19:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7111913887 # 2143