@@ -1,12 +1,7 @@
 {
-  "count": 125,
-  "uniques": 21,
+  "count": 93,
+  "uniques": 17,
   "views": [
-    {
-      "timestamp": "2023-11-24T00:00:00Z",
-      "count": 32,
-      "uniques": 4
-    },
     {
       "timestamp": "2023-11-25T00:00:00Z",
       "count": 3,
