@@ -1,3 +1,12 @@
+2023-12-09T01:06:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7147990702 # 2151
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-09
+* notice: last 14d: unq all: 17 93
+* notice: prev accum: outdated-unq outdated-all / unq all: 483 2578 / 506 2703
+* notice: next accum: outdated-unq outdated-all / unq all: 487 2610 / 506 2703
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-11-24] / []
+
 2023-12-08T01:08:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7136024729 # 2148
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-08
